# trill

./: Cargo.toml  rustfmt.toml
crates/bevy_mod_props/: Cargo.toml
crates/bevy_mod_props/src/: lib.rs
crates/bevy_mod_props/src/props/: ext.rs  mod.rs
crates/bevy_mod_props/src/registry/: ext.rs  mod.rs
crates/bevy_trill/: Cargo.toml
crates/bevy_trill/src/: lib.rs
crates/trill_core/: Cargo.toml
crates/trill_core/src/: engine.rs  lib.rs
crates/trill_script/: Cargo.toml  readme.md
crates/trill_script/src/: error.rs  lexer.rs  lib.rs  parser.rs
demo/: Cargo.toml
demo/assets/: dialog.trl
demo/src/: main.rs
src/: lib.rs
