[package]
name = "trill"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*", "demo"]

[workspace.dependencies]
bevy_app = "0.17.2"
bevy_asset = "0.17.2"
bevy_ecs = { version = "0.17.2", default-features = false }
bevy_reflect = "0.17.2"
bevy_tasks = "0.17.2"

codespan-reporting = "0.13.1"
itertools = "0.14.0"
logos = "0.15.1"
rand = "0.9.2"
rapidhash = "4.1.1"
thiserror = "2.0.17"
ustr = "1.1.0"

[dependencies]
trill_core = { path = "crates/trill_core" }
trill_script = { path = "crates/trill_script" }
