[package]
name = "bevy_mod_props"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
ustr.workspace = true

[dev-dependencies]
bevy_ecs.workspace = true

[features]
bevy = [ "dep:bevy_ecs", "dep:thiserror" ]
default = [ "bevy" ]
